src/test/ui/issue-51116.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-51116.rs:16:13
   |
LL |         for tile in row {
   |                     --- the element type for this iterator is not specified
LL |             //~^ NOTE the element type for this iterator is not specified
LL |             *tile = 0;
   |             ^^^^^ cannot infer type
   |
   = note: type must be known at this point

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
